--- a/README.textile
+++ b/README.textile
@@ -9,6 +9,7 @@ h2. Dependencies
 * Python 2.6
 * boto
 * paramiko
+* csvkit
 
 h2. Installation for users
 
@@ -57,6 +58,28 @@ This spins up 4 servers in security group 'public' using the EC2 keypair 'frakki
 It then uses those 4 servers to send 10,000 requests, 250 at a time, to attack OurNewWebbyHotness.com.
 
 Lastly, it spins down the 4 servers.  *Please remember to do this*--we aren't responsible for your EC2 bills.
+
+h2. Advanced Usage
+
+<pre>
+bees up -s 5 -g public -k frakkingtoasters -z us-west-1a -i ami-aabbccdd -l ubuntu
+for i in `seq 200 200 1000`
+do
+   echo "---- $i -----"
+   bees attack -t 900 -c $i -p query.dat -u http://www.ournewwebbyhotness.com/ --stats-file 15_Min_200_step.csv --non-200-is-failure --testname $i
+done
+bees down
+gnuplot -e "filename='15_Min_200_step'" examples/LoadTest.gpi
+</pre>
+
+This spins up 5 servers in the us-west-1a AZ from the specified AMI in security group 'public' using the EC2 keypair 'frakkingtoasters', whose private key is expected to reside at ~/.ssh/frakkingtoasters.pem.
+
+It then runs a series of 15 minute tests (which in this case are a post of some query.dat file) with an increasing number of concurrent users, all the while collecting all the resulting statistics in the 15_Min_200_step.csv file. Note that in this test non 200 responses are considered as errors.
+
+Next, the bees are spun down.
+
+Finally, a graph is created from the csv using gnuplot (an example gnuplot script can be found in the examples dir).
+
 
 For complete options type:
 
